# dry-matter-biomass-calculator

./: LICENSE.txt  README.md  __main__.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
data/: annual_change_range.xlsx  example_data.csv
notebooks/: Notes.ipynb  WorkshopWithDT.ipynb
src/: builders.py  distribution.py
src/example/: __init__.py  areas.py  example.py
test/example/: area_test.py  example_test.py
