[metadata]
name = python_vscode_ds_template
version = 0.0.1
description = A template Python project for data science using pyenv pip-tools and VSCode
long_description = file: README.md
license_files = LICENSE.txt
url = https://github.com/jaycoe/python_vscode_ds_template
license = MIT License
project_urls =
    Bug Tracker = https://github.com/jaycoe/python_vscode_ds_template/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.7, <4
install_requires = 
    numpy
    pandas
    scipy
    matplotlib

[options.packages.find]
where = src

[options.extras_require]
dev =
    mypy
    jupyter
    pylint
test =
    pytest
